--- a/CarRental/Views/AdminDashboard/Dashboard.cshtml
+++ b/CarRental/Views/AdminDashboard/Dashboard.cshtml
@@ -98,7 +98,7 @@
             <a asp-controller="AdminBooking" asp-action="Index" class="btn btn-outline-warning m-2 px-4">
                 <i class="bi bi-journal-check"></i> Manage Bookings
             </a>
-            <a asp-controller="AdminCustomer" asp-action="CustomerList" class="btn btn-outline-success m-2 px-4">
+            <a asp-controller="AdminCustomer" asp-action="Index" class="btn btn-outline-success m-2 px-4">
                 <i class="bi bi-person-badge"></i> Manage Customers
             </a>
             <a asp-controller="AdminUser" asp-action="Index" class="btn btn-outline-dark m-2 px-4">
