--- a/CarRental/Views/Shared/_AdminLayout.cshtml
+++ b/CarRental/Views/Shared/_AdminLayout.cshtml
@@ -25,7 +25,7 @@
             <div class="container-fluid">
                 <!-- Brand -->
                 <a class="navbar-brand fw-bold d-flex align-items-center text-warning"
-                   asp-area="Admin" asp-controller="Dashboard" asp-action="Index">
+                   asp-area="" asp-controller="AdminDashboard" asp-action="Index">
                     <i class="bi bi-speedometer2 me-2"></i> CarRental | Admin
                 </a>
 
@@ -48,13 +48,25 @@
                             </a>
                         </li>
 
+                        <li class="nav-item">
+                            <a class="nav-link @(ViewData["Title"]?.ToString() == "Dashboard" ? "active text-warning fw-bold" : "")"
+                               asp-area="" asp-controller="AdminCustomer" asp-action="CustomerList" aria-current="page">
+                                <i class="bi bi-people-fill me-1"></i> CustomerList
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link @(ViewData["Title"]?.ToString() == "Dashboard" ? "active text-warning fw-bold" : "")"
+                               asp-area="" asp-controller="AdminCustomer" asp-action="AddCustomer" aria-current="page">
+                                <i class="bi bi-person-plus-fill me-1"></i> Add Customer
+                            </a>
+                        </li>
 
 
 
 
 
 
-                        <!-- Users Dropdown -->
+                        @* <!-- Users Dropdown -->
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle @(ViewData["Title"]?.ToString() == "Users" ? "active text-warning fw-bold" : "")"
                                href="#" id="usersDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -83,7 +95,7 @@
 
 
                             </ul>
-                        </li>
+                        </li> *@
 
                         <!-- Cars -->
                         <li class="nav-item">
